--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
+@font-face { font-family: Sovereign; 
+  src: url('https://uploads-ssl.webflow.com/61669e248724654baf8b8d74/6166a324b16eb70a0f867483_Sovereign.ttf'); } 
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Sovereign', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #000;
+  box-sizing: border-box;
+  width: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
