--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
-@font-face { font-family: Sovereign; 
-  src: url('https://uploads-ssl.webflow.com/61669e248724654baf8b8d74/6166a324b16eb70a0f867483_Sovereign.ttf'); } 
+@font-face {
+  font-family: Sovereign;
+  src: url("https://uploads-ssl.webflow.com/61669e248724654baf8b8d74/6166a324b16eb70a0f867483_Sovereign.ttf");
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap");
 
 body {
   margin: 0;
-  font-family: 'Sovereign', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Sovereign", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #000;
@@ -14,7 +18,11 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
+@font-face {
+  font-family: "Osake";
+  src: local("Osake"), url("./fonts/Osake.ttf") format("truetype");
+}
